--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-body {
+.wrap {
     display: flex;
     font-size: 20px;
     line-height: 1.5;
@@ -20,6 +20,17 @@ h2 {
     color: #006EB6;
     letter-spacing: 6px;
 }
+
+/* Dark Settings */
+.dark {
+    background-color: black;
+    color: white;
+}
+
+.dark h2 {
+    color: lightblue;
+}
+
 
 .content {
     max-width: 600px;
