--- a/coolpics/coolpics.css
+++ b/coolpics/coolpics.css
@@ -39,12 +39,12 @@ header h1 {
     margin-bottom: 1em;
 }
 
-button {
+.menu-btn {
     border: none;
     background-color: inherit;
     font-size: 1.2em;
     cursor: pointer;
-    color: white;
+    color: rgb(0, 0, 0);
 }
 
 header {
@@ -62,7 +62,7 @@ footer {
     background-color: var(--primary-color);
     padding: 1em;
 }
-nav {
+menu {
     justify-content:center;
     gap: 2em;
     display: flex;
@@ -116,13 +116,17 @@ figure img {
     display: block;
 }
 
+.hide {
+    display: none;
+}
+
+dialog {
+    
+}
+
 /*medium*/
 @media screen and (min-width: 700px) {
     .gallery {grid-template-columns: 1fr 1fr;}
-    nav {
-        display:none;
-        
-    }
 }
 
 /*large*/
@@ -131,8 +135,11 @@ figure img {
     .button-container {
         display: none;
     }
-    nav {
+    .menu {
         display: flex;
         flex-direction: row;
+    }
+    .hide {
+        display: flex;
     }
 }
