--- a/blog/blog.css
+++ b/blog/blog.css
@@ -55,7 +55,7 @@ body {
 
 .grid-container {
     display: grid;
-    grid-template-columns: 2fr 1fr;
+    grid-template-columns: 1fr 2fr 1fr;
     gap: 20px;
 }
 
@@ -74,21 +74,17 @@ body {
 
 }
 
-.blog-articles{
-    display: grid;
-    grid-template-columns: 1fr 2fr;
-    gap: 20px;
-}
+
 
 .left-column {
-    grid-column: 1;
+    grid-column: 1/2;
     text-align: right;
     font-size: 25px;
     font-family: "Arial, Helvetica, sans-serif";
 }
 
 .middle-column {
-    grid-column: 2;
+    grid-column: 2/3;
     border-right: 2px solid rgb(179, 179, 179);
     border-left: 2px solid rgb(179, 179, 179);
     padding: 0px 10px 0px 10px;
@@ -107,6 +103,7 @@ body {
     font-family: "Arial, Helvetica, sans-serif";
 }
 .filter-column {
-    grid-column: 3;
+    grid-column: 3/4;
+    grid-row: 1/2;
     border: 3px solid rgb(48, 48, 48);
 }
