--- a/creditcard/card.css
+++ b/creditcard/card.css
@@ -1,7 +1,7 @@
 @import url(https://fonts.googleapis.com/css?family=Lato:400,700,300);
 
 body {
-    background-color: rgb(88, 41, 26);
+    background-color: rgb(66, 99, 66);
     font-family: lato, 'helvetica-light';
     position: relative;
     text-transform: uppercase;
@@ -9,7 +9,14 @@ body {
 }
 
 #amount {
-    font-size: 12px;
+  position: relative;
+  left: 20px;  
+  font-size: 16px;
+    font-weight: bold;
+    background-color: rgb(154, 158, 99);
+    padding: 5px, 10px;
+    border-radius: 4px;
+    margin-left: 20px;
 }
 
 #card-back {
@@ -18,6 +25,10 @@ body {
     z-index: -2;
 }
 
+#card-front {
+  top: 10px;
+  box-shadow: 3px 3px 8px rgba(0, 0, 0, 0.3);
+}
 #card-btn {
   background-color: rgba(151, 158, 54, 0.8);
   color: #ffffff;
@@ -41,4 +52,221 @@ body {
   background-color: rgba(98, 102, 35, 0.8);
 }
 
+#card-cvc {
+  width: 60px;
+  margin-bottom: 0;
+}
 
+#card-front,
+#card-back {
+  position: absolute;
+  background-color: rgb(98, 102, 35);
+  width: 390px;
+  height: 250px;
+  border-radius: 6px;
+  padding: 55px 30px 0;
+  box-sizing: border-box;
+  font-size: 10px;
+  letter-spacing: 1px;
+  font-weight: 300;
+  color: whitesmoke;
+}
+
+#card-image {
+  position: absolute;
+  top: 10px;
+  height: 100%;
+}
+
+#card-image i {
+  
+  font-size: 40px;
+}
+
+#expirationMonth {
+  width: 45% !important;
+}
+
+#cardNumber,
+#cardHolder {
+  width: 100%;
+  margin-top: 10;
+}
+
+#card-stripe {
+  width: 100%;
+  height: 55px;
+  background-color: rgb(46, 46, 46);
+  position: absolute;
+  right: 0;
+}
+
+#card-year {
+  width: 45%;
+  float: right;
+}
+
+#cardholder-container {
+  width: 60%;
+  display: inline-block;
+}
+
+#cvc-container {
+  position: absolute;
+  width: 110px;
+  right: -115px;
+  bottom: -50px;
+  padding-left: 20px;
+  box-sizing: border-box;
+}
+
+#cvc-container label {
+  width: 100%;
+}
+
+#cvc-container p {
+  font-size: 10px;
+  text-transform: uppercase;
+  opacity: 0.6;
+  letter-spacing: .5px;
+}
+
+#form-container {
+  margin: auto;
+  width: 500px;
+  height: 290px;
+  position: relative;
+}
+
+#form-errors {
+  color: #eb0000;
+}
+
+#form-errors,
+#card-success {
+  background-color: white;
+  width: 500px;
+  margin: 0 auto 10px;
+  height: 50px;
+  border-radius: 8px;
+  padding: 0 20px;
+  font-weight: 400;
+  box-sizing: border-box;
+  line-height: 46px;
+  letter-spacing: .5px;
+  text-transform: none;
+}
+
+#form-errors p,
+#card-success p {
+  margin: 0 5px;
+  display: inline-block;
+}
+
+#exp-container {
+  margin-left: 10px;
+  width: 100%;
+  display: flex;
+  gap: 10px;
+  box-sizing: border-box;
+}
+
+.hidden {
+  display: none;
+}
+
+#image-container {
+  width: 100%;
+  position: absolute;
+  height: 55px;
+  margin-bottom: 5px;
+  margin-left: 15px;
+  line-height: 55px;
+  z-index: 1
+}
+
+#image-container img {
+  position: absolute;
+  right: 0;
+  top: 0;
+}
+
+input {
+  border: none;
+  outline: none;
+  background-color:rgb(114, 119, 42);
+  height: 30px;
+  line-height: 30px;
+  padding: 0 10px;
+  margin: 0 0 25px;
+  color: white;
+  font-size: 10px;
+  box-sizing: border-box;
+  border-radius: 4px;
+  font-family: lato, 'helvetica-light', 'sans-serif';
+  letter-spacing: .7px;
+}
+
+input::-webkit-input-placeholder {
+  color: #fff;
+  opacity: 0.7;
+  font-family: lato, 'helvetica-light', 'sans-serif';
+  letter-spacing: 1px;
+  font-weight: 300;
+  letter-spacing: 1px;
+  font-size: 10px;
+}
+
+input:-moz-placeholder {
+  color: #fff;
+  opacity: 0.7;
+  font-family: lato, 'helvetica-light', 'sans-serif';
+  letter-spacing: 1px;
+  font-weight: 300;
+  letter-spacing: 1px;
+  font-size: 10px;
+}
+
+input::-moz-placeholder {
+  color: #fff;
+  opacity: 0.7;
+  font-family: lato, 'helvetica-light', 'sans-serif';
+  letter-spacing: 1px;
+  font-weight: 300;
+  letter-spacing: 1px;
+  font-size: 10px;
+}
+
+input:-ms-input-placeholder {
+  color: #fff;
+  opacity: 0.7;
+  font-family: lato, 'helvetica-light', 'sans-serif';
+  letter-spacing: 1px;
+  font-weight: 300;
+  letter-spacing: 1px;
+  font-size: 10px;
+}
+
+input.invalid {
+  border: solid 2px #eb0000;
+  height: 34px;
+}
+
+label {
+  display: block;
+  margin: 0 auto 7px;
+}
+
+#shadow {
+  position: absolute;
+  right: 0;
+  width: 284px;
+  height: 214px;
+  top: 36px;
+  background-color: #000;
+  z-index: -1;
+  border-radius: 8px;
+  box-shadow: 3px 3px 0 rgba(0, 0, 0, 0.1);
+  -moz-box-shadow: 3px 3px 0 rgba(0, 0, 0, 0.1);
+  -webkit-box-shadow: 3px 3px 0 rgba(0, 0, 0, 0.1);
+}
